# trail

./: .env.example  .gitignore  CHANGES.md  DEPLOYMENT.md  DEVELOPMENT_SETUP_SUMMARY.md  ENV_CONFIGURATION.md  PHP_EXTENSIONS_COMPARISON.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING_PRODUCTION_PARITY.md  config.yml  config.yml.example  info.html  run-migration.php  run.sh  setup-uploads-directory.sh  sync.sh  test-all.sh  test-api.sh  test_config.sh
android/: .gitignore  README.md  build.gradle.kts  diagnose-google-signin.sh  fix-google-play-services.sh  get-sha-fingerprints.sh  gradle.properties  settings.gradle.kts
backend/: .dockerignore  .env.docker  .gitignore  DEVELOPMENT.md  DEV_LOGIN_QUICK_START.md  DOCKER.md  Dockerfile  ENVIRONMENT_CHECKLIST.md  Makefile  README.md  check_image_support.php  cleanup-orphan-images.sh  cleanup-temp-files.sh  composer.json  config.yml.example  docker-compose.prod.yml  docker-compose.yml  phpstan-baseline.neon  phpstan.neon  phpunit.xml  run.sh  secrets.yml.example  setup-docker.sh  test-medium-oembed.php  (+2 more)
scripts/: db_migrate.py  deploy.py  full_deploy.py  install.py  prepare_deploy.py  pyproject.toml  re_enable_edge_to_edge.sh  verify_deployment_readiness.py  verify_php_extensions.sh  verify_vendor.py
topic-generation/: .gitignore  README.md  generate_tags.py  pyproject.toml  requirements.txt
topic-generation/.opencode/: opencode.json
topic-generation/.opencode/agent/: tag-generator.md
twitter/: .gitignore  README.md  import_twitter_archive.py  migrate.sh  pyproject.toml  requirements.txt  test_api.py
(+360 files in other folders)
