[project]
name = "trail-topic-generation"
version = "1.0.0"
description = "AI-powered tag generation for Trail entries"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.scripts]
generate-tags = "generate_tags:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
